# MagBeltBot

./: .gitignore  LICENSE  README.md  README.rst  magbelt_sanitized.py  pyproject.toml
magbeltbot/: magbelt_sanitized.py
tests/: test_magbeltbot.py
